--- a/metadata.yml
+++ b/metadata.yml
@@ -6,7 +6,6 @@ header-includes:
   - \geometry{top=2.54cm, bottom=2.54cm, left=2.54cm, right=2.54cm}
   - \linespread{0.8}
   - \usepackage{titlesec}
-  - \titleformat{\title}{\color{green}\normalfont\LARGE\bfseries}{\thesection}{1em}{}
-  - \titleformat{\section}{\color{green}\normalfont\Large\bfseries}{\thesection}{1em}{}
-  - \titleformat{\subsection}{\color{green}\normalfont\large\bfseries}{\thesubsection}{1em}{}
+  - \titleformat{\title}{\color{#228B22}\normalfont\LARGE\bfseries}{\thesection}{1em}{}
+  - \titleformat{\section}{\color{#228B22}\normalfont\Large\bfseries}{\thesection}{1em}{}
 ---
