--- a/metadata.yml
+++ b/metadata.yml
@@ -7,6 +7,7 @@ header-includes:
   - \linespread{0.8}
   - \usepackage{titlesec}
   - \definecolor{customGreen}{HTML}{228B22}
-  - \titleformat{\title}{\color{customGreen}\normalfont\LARGE\bfseries}{\thesection}{1em}{}
+    - \definecolor{customGreenNew}{HTML}{228Bff}
+  - \titleformat{\title}{\color{customGreenNew}\normalfont\LARGE\bfseries}{\thesection}{1em}{}
   - \titleformat{\section}{\color{customGreen}\normalfont\Large\bfseries}{\thesection}{1em}{}
 ---
